--- a/style.css
+++ b/style.css
@@ -5,20 +5,20 @@
     gap: 0;
 }
 
-.chess .ligne div
+.chess .col div
 {
     width: 100%;
     height: 100px;
 }
 
-.chess .ligne:nth-child(2n) div:nth-child(2n), .chess .ligne:nth-child(2n+1) div:nth-child(2n+1)
+.chess .col:nth-child(2n) div:nth-child(2n), .chess .col:nth-child(2n+1) div:nth-child(2n+1)
 {
     background-color: rgb(212, 212, 212);
     border: rgb(212, 212, 212) 1px solid;
     color: black;
 }
 
-.chess .ligne:nth-child(2n+1) div:nth-child(2n), .chess .ligne:nth-child(2n) div:nth-child(2n+1)
+.chess .col:nth-child(2n+1) div:nth-child(2n), .chess .col:nth-child(2n) div:nth-child(2n+1)
 {
     background-color:  #8c8c8c;
     border: #8c8c8c 1px solid;
@@ -35,7 +35,7 @@
 }
 
 
-.chess .ligne div
+.chess .col div
 {
     text-align: center;
     align-content: center;
